# V-RGBX

./: LICENSE  README.md  pyproject.toml  vrgbx_edit_inference.py  vrgbx_forward_rendering.py  vrgbx_inverse_rendering.py
vrgbx/configs/: model_config.py
vrgbx/data/: __init__.py  video.py
vrgbx/models/: lora.py  model_manager.py  utils.py  wan_video_dit.py  wan_video_vace.py
vrgbx/pipelines/: vrgbx_model.py
vrgbx/prompters/: wan_prompter.py
vrgbx/utils/: __init__.py  download_weights.py
