[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrgbx"
version = "0.1.0"
description = "V-RGBX: Video Editing with Accurate Controls over Intrinsic Properties"
authors = [{name = "ModelScope Team"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "transformers",
    "imageio",
    "imageio[ffmpeg]",
    "safetensors",
    "einops",
    "sentencepiece",
    "protobuf",
    "modelscope",
    "ftfy",
    "pandas",
    "opencv-python",
    "accelerate",
    "peft",
    "s3fs",
    "datasets",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]

[tool.setuptools]
include-package-data = true